--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"clean": "rimraf .svelte-kit build",
+		"build": "npm run clean && vite build",
 		"preview": "vite preview",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write ."
@@ -20,8 +21,14 @@
 		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"rimraf": "^5.0.7",
 		"svelte": "^4.2.7",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.1",
+		"postcss": "^8.4.38",
+		"postcss-import": "^16.1.0"
+	}
 }
